--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <br><br>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis sint praesentium aut explicabo perspiciatis animi architecto nam fugiat cumque tempora consectetur at non, cum dolor nisi adipisci dignissimos ipsum repellat!</p>
             <br>
-            <button class="resume" type="file"><a target="_blank" href="index.html">DOWNLOAD RESUME</a></button>
+            <button class="resume" type="file"><a target="_blank" href="index.html">DOWNLOAD</a></button>
             
         </div>
         
