--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h1>Welcome </h1>
             <h1><span style="color: red;">To</span></h1>
             <h1>My Protfolio <span style="color: orange;">!</span></h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis molestias aliquam minima pariatur possimus totam impedit iste iusto voluptatibus dolore cumque eaque aspernatur vel exercitationem dolorum, nulla, odit maiores adipisci.</p>
+            <p>Hello, my name is Tushar Kanti. I am completed my graduation in Daffodil International University.I am looking for internship/full-time position at any company. Now I am web designer and developer. Honsetly I say that i a good learner and I like to hard work and create my positon in it.</p>
             <button class="button"><a target="_blank" href="https://www.facebook.com/">Here Me</a></button>
         </div>
         <div class="half-width">
@@ -49,22 +49,29 @@
 
     <section class="end">
         
-        <div class="card1">
             <div class="card1-1">
                 <h2>Design Part</h2>
                 <hr>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid rem vitae sed harum tempora officiis nobis voluptatum deleniti minus recusandae.</p>
+                <br>
+                <h3>Languages</h3>
+                <p>
+         1.  HTML <br>
+        2.  CSS <br>
+        3.  BOOTSTRAP <br>
+        4.  JS <br>
+        5.  REACT 
+                </p>
             </div>
-        </div>
-        <div class="card2">
             <div class="card2-2">
 
                <h2> Development Part</h2>
                <hr>
-
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente ipsa at quaerat voluptates magni laboriosam eos maiores incidunt dignissimos veniam?</p>
+                <br>
+                <p>
+                    Learning.........
+                </p>
+               
             </div>
-        </div>
     </section>
     <footer id="footer">
 
